# RustyEDR

./: .gitignore  README.md
RustyEDR/: Cargo.toml
RustyEDR/src/: data_populate.rs  database_manager.rs  firewall.rs  get_config.rs  honeytoken.rs  key_monitors.rs  main.rs  persistence_check.rs  process_monitor.rs  setup.rs  shares.rs  sys_monitor.rs  webserver_lib.rs
RustyEDR/src/winapi_backend/: mod.rs  services_manager.rs
