[package]
name = "RustyEDR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
futures = { version = "0.3.*" }
tokio = {version = "1.21.2", features = ["full"] }
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0"
env_logger = "0.9.1"
log = "0.4.17"